# raytracer

./: .gitmodules  CMakeLists.txt  README.md  camera.cpp  camera.hpp  color3.cpp  color3.hpp  engine.cpp  engine.hpp  main.cpp  ray.cpp  ray.hpp  vector3.cpp  vector3.hpp
hitObject/: hitObject.cpp  hitObject.hpp  mesh.cpp  mesh.hpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
material/: dielectric.cpp  dielectric.hpp  lambertian.cpp  lambertian.hpp  light.cpp  light.hpp  material.hpp  metal.cpp  metal.hpp
raytracing_engine/: engine.cpp  engine.hpp  ray.cpp  ray.hpp
scenes/: camera.cpp  camera.hpp  camera.json  scene.cpp  scene.hpp
scenes/configurations/: camera.json  camera_high.json  camera_low.json  scene1.json  scene2.json  scene3.json  scene4.json  scene5.json  scene6.json  scene6_light.json
utils/: color3.cpp  color3.hpp  common.hpp  interval.cpp  interval.hpp  vector3.cpp  vector3.hpp
